--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.servlet.context-path=${SERVER-PATH:/api}
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 #Minio Properties
-spring.minio.url=${MINIO_URL:http://127.0.0.1:9000}
+spring.minio.url=${MINIO_URL:http://minio:9000}
 spring.minio.bucket=${MINIO_BUCKET:file-storage}
 spring.minio.access-key=${MINIO_ACCESS_KEY:Ilia_Duhov}
 spring.minio.secret-key=${MINIO_SECRET_KEY:31012003ID@}
