--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ management.endpoint.health.show-details=always
 #Minio Properties
 spring.minio.url=${MINIO_URL:http://minio:9000}
 spring.minio.bucket=${MINIO_BUCKET:file-storage}
-spring.minio.access-key=${MINIO_ACCESS_KEY:Ilia_Duhov}
-spring.minio.secret-key=${MINIO_SECRET_KEY:31012003ID@}
+spring.minio.access-key=${MINIO_ACCESS_KEY:Q3AM3UQ867SPQQA43P2F}
+spring.minio.secret-key=${MINIO_SECRET_KEY:tfteSlswRu7BJ86wekitnifILbZam1KYY3TG}
 #Swagger Properties
 springdoc.api-docs.path=${API_DOCS_PATH:/api-docs}
 #Servlet Multipart Properties
