--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,9 @@ services:
       API_DOCS_PATH: "/api-docs"
       SWAGGER_UI_ENABLED: "true"
       SWAGGER_UI_PATH: "/documentation"
-      MINIO_URL: http://minio:9000
+      MINIO_URL: "http://minio:9000"
+      MINIO_PORT: "9000"
+      REMOTE_URL: "192.168.44.76/minio-api"
       MINIO_BUCKET: "file-storage"
       MINIO_ACCESS_KEY: "Q3AM3UQ867SPQQA43P2F"
       MINIO_SECRET_KEY: "tfteSlswRu7BJ86wekitnifILbZam1KYY3TG"
