--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: minio/minio
     command: server /data
     environment:
-      MINIO_ACCESS_KEY: "Ilia_Duhov"
-      MINIO_SECRET_KEY: "31012003ID@"
+      MINIO_ACCESS_KEY: "Q3AM3UQ867SPQQA43P2F"
+      MINIO_SECRET_KEY: "tfteSlswRu7BJ86wekitnifILbZam1KYY3TG@"
       MINIO_URL: http://minio:9000
     volumes:
       - ./data/minio-persistence:/data
