--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,14 @@ services:
     image: minio/minio
     command: server /data
     environment:
-      MINIO_ACCESS_KEY: "Q3AM3UQ867SPQQA43P2F"
-      MINIO_SECRET_KEY: "tfteSlswRu7BJ86wekitnifILbZam1KYY3TG@"
+      MINIO_ACCESS_KEY: "minioadmin"
+      MINIO_SECRET_KEY: "minioadmin"
       MINIO_URL: http://minio:9000
     volumes:
       - ./data/minio-persistence:/data
       - ./data/minio-persistence/certs:/certs
+      - ./data/minio-persistence/certs:/file-storage
+
     ports:
       - 9000:9000
     networks:
@@ -32,8 +34,8 @@ services:
       MINIO_PORT: "9000"
       REMOTE_URL: "192.168.44.76/minio-api"
       MINIO_BUCKET: "file-storage"
-      MINIO_ACCESS_KEY: "Q3AM3UQ867SPQQA43P2F"
-      MINIO_SECRET_KEY: "tfteSlswRu7BJ86wekitnifILbZam1KYY3TG"
+      MINIO_ACCESS_KEY: "minioadmin"
+      MINIO_SECRET_KEY: "minioadmin"
       MAX_FILE_SIZE: "20MB"
       MAX_REQUEST_SIZE: "20MB"
       FILE-SIZE-THRESHOLD: "2KB"
