--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ server.servlet.context-path=${SERVER-PATH:/api}
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 #Minio Properties
-spring.minio.url=${MINIO_URL:http://minio:9000}
+spring.minio.url=${MINIO_URL:http://127.0.0.1:9000}
 spring.minio.bucket=${MINIO_BUCKET:file-storage}
-spring.minio.access-key=${MINIO_ACCESS_KEY:Q3AM3UQ867SPQQA43P2F}
-spring.minio.secret-key=${MINIO_SECRET_KEY:tfteSlswRu7BJ86wekitnifILbZam1KYY3TG}
+spring.minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
+spring.minio.secret-key=${MINIO_SECRET_KEY:minioadmin}
 #Swagger Properties
 springdoc.api-docs.path=${API_DOCS_PATH:/api-docs}
 #Servlet Multipart Properties
